feat: add pop up listing UE

--- a/templates/course_info/view/view.html.twig
+++ b/templates/course_info/view/view.html.twig
@@ -3,6 +3,10 @@
 {% block body_class %}
 {% endblock %}
 
+{% block modals %}
+    {% include 'modal/EcueListUe.html.twig' %}
+{% endblock %}
+
 {% block main %}
     <div class="student-view">
         <div class="container">
