--- a/templates/course_info/view/view.html.twig
+++ b/templates/course_info/view/view.html.twig
@@ -39,7 +39,43 @@
                         {% include 'course_info/view/student_closing_remarks.html.twig' %}
                     {% endif %}
                 {% endif %}
-
+                <h3 class="my-5 text-left text-primary">
+                    {{ 'app.view.student.presentation.support_for_success' | trans }}
+                </h3>
+                <ul>
+                    <li><a href="https://univ-cotedazur.fr/tuttop" class="text-blue">TUT'TOP</a>&nbsp; du tutorat par
+                        les pairs sur le plan
+                        méthodologique, social, administratif ou logistique
+                    </li>
+                    <li><a href="https://lms.univ-cotedazur.fr/2022/enrol/index.php?id=13515" class="text-blue">Kit
+                            de(sur) vie étudiant UCA :</a>&nbsp; un guide pour comprendre
+                        l'université et ses outils
+                    </li>
+                    <li><a href="https://ecriplus.fr/" class="text-blue">ecris+</a>&nbsp; pour améliorer son francais
+                        écrit
+                    </li>
+                    <li>
+                        <a href="https://univ-cotedazur.fr/portails/staps/scolarite/organisation-des-etudes/centres-de-ressources-en-langues"
+                           class="text-blue">
+                            Centre de ressources en langues</a>&nbsp; développer ses
+                        compétences en langues vivantes, française ou étrangères
+                    </li>
+                    <li><a href="https://bu.univ-cotedazur.fr/fr/se-former/metoda" class="text-blue">METODA</a>&nbsp;
+                        pour booster ses compétences informationnelles
+                    </li>
+                    <li><a href="https://univ-cotedazur.fr/universite/responsabilite-ethique-et-universitaire/handicap"
+                           class="text-blue">Cellule Handicap</a>&nbsp; découvrir les aides proposées pour les
+                        étudiants en situation de handicap
+                    </li>
+                    <li><a href="" class="text-blue">S'orienter ou se réorienter:</a>&nbsp; être accompagné dans les BIO
+                    </li>
+                    <li>
+                        <a href="https://univ-cotedazur.fr/formation/scolarite/evaluation-des-enseignements-et-des-formations"
+                           class="text-blue">Maison de l'évaluation</a>&nbsp; évaluer ses enseignements à la fin
+                        de chaque semestre
+                    </li>
+                    <li>Université Numérique thématique</li>
+                </ul>
 
                 <div class="text-muted text-center pb-5">
                     <h5>{{ 'app.view.student.alert.important' | trans }}</h5>
@@ -49,7 +85,8 @@
                     <p>
                         {{ 'app.view.student.alert.text.part_2' | trans }}
                     </p>
-                    <a href="{{ 'app.view.student.syllabus_form.link' | trans }}" class="btn btn-outline-primary text-center" target="_blank">
+                    <a href="{{ 'app.view.student.syllabus_form.link' | trans }}"
+                       class="btn btn-outline-primary text-center" target="_blank">
                         {{ 'app.view.student.syllabus_form.text' | trans }}
                     </a>
                 </div>
