refactor: Kit de(sur) vie étudiant UCA link

--- a/templates/course_info/view/view.html.twig
+++ b/templates/course_info/view/view.html.twig
@@ -43,36 +43,43 @@
                     {{ 'app.view.student.presentation.support_for_success' | trans }}
                 </h3>
                 <ul>
-                    <li><a href="https://univ-cotedazur.fr/tuttop" class="text-blue">TUT'TOP</a>&nbsp; du tutorat par
+                    <li><a href="https://univ-cotedazur.fr/tuttop" class="text-blue" target="_blank">TUT'TOP</a>&nbsp;
+                        du tutorat par
                         les pairs sur le plan
                         méthodologique, social, administratif ou logistique
                     </li>
-                    <li><a href="https://lms.univ-cotedazur.fr/2022/enrol/index.php?id=13515" class="text-blue">Kit
+                    <li><a href="https://lms.univ-cotedazur.fr/{{ courseInfo.year.id }}/enrol/index.php?id=13515" class="text-blue"
+                           target="_blank">Kit
                             de(sur) vie étudiant UCA :</a>&nbsp; un guide pour comprendre
                         l'université et ses outils
                     </li>
-                    <li><a href="https://ecriplus.fr/" class="text-blue">ecris+</a>&nbsp; pour améliorer son francais
+                    <li><a href="https://ecriplus.fr/" class="text-blue" target="_blank">ecris+</a>&nbsp; pour améliorer
+                        son francais
                         écrit
                     </li>
                     <li>
                         <a href="https://univ-cotedazur.fr/portails/staps/scolarite/organisation-des-etudes/centres-de-ressources-en-langues"
-                           class="text-blue">
+                           class="text-blue" target="_blank">
                             Centre de ressources en langues</a>&nbsp; développer ses
                         compétences en langues vivantes, française ou étrangères
                     </li>
-                    <li><a href="https://bu.univ-cotedazur.fr/fr/se-former/metoda" class="text-blue">METODA</a>&nbsp;
+                    <li><a href="https://bu.univ-cotedazur.fr/fr/se-former/metoda" class="text-blue" target="_blank">METODA</a>&nbsp;
                         pour booster ses compétences informationnelles
                     </li>
                     <li><a href="https://univ-cotedazur.fr/universite/responsabilite-ethique-et-universitaire/handicap"
-                           class="text-blue">Cellule Handicap</a>&nbsp; découvrir les aides proposées pour les
+                           class="text-blue" target="_blank">Cellule Handicap</a>&nbsp; découvrir les aides proposées
+                        pour les
                         étudiants en situation de handicap
                     </li>
-                    <li><a href="" class="text-blue">S'orienter ou se réorienter:</a>&nbsp; être accompagné dans les BIO
+                    <li>
+                        <a href="https://univ-cotedazur.fr/portails/portail-sciences-et-technologies/scolarite/sorienter-se-reorienter/sorienter-se-reorienter"
+                           class="text-blue" target="_blank">S'orienter ou se réorienter:</a>&nbsp; être accompagné dans
+                        les BIO
                     </li>
                     <li>
                         <a href="https://univ-cotedazur.fr/formation/scolarite/evaluation-des-enseignements-et-des-formations"
-                           class="text-blue">Maison de l'évaluation</a>&nbsp; évaluer ses enseignements à la fin
-                        de chaque semestre
+                           class="text-blue" target="_blank">Maison de l'évaluation</a>&nbsp; évaluer ses enseignements
+                        à la fin de chaque semestre
                     </li>
                     <li>Université Numérique thématique</li>
                 </ul>
