--- a/templates/modal/PublicContent.html.twig
+++ b/templates/modal/PublicContent.html.twig
@@ -1,6 +1,6 @@
 <div class="modal fade" id="PublicContentModal" tabindex="-1" role="dialog"
      aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title text-blue" id="PublicContentModal">Qu'est ce que le contenu public ? </h4>
@@ -10,22 +10,27 @@
             </div>
             <div class="modal-body">
                 <div>
-                    <p>Le contenu public correspond aux informations visibles par tous, y compris des personnes
-                        extérieurs à l'université.</p>
-                    <p>Lorsque votre syllabus est publié, une partie d'informations est utilisé pour l'afficher sur le
-                        site web de l'université, notamment sur l'offre de formation. </p>
-                    <p>Voici les informations principales qui se retrouvent sur le syllabus "public":</p>
-                    <p>&emsp; - Présentation générale(structure, niveau, semestre, domaine, langue, description, image
-                        ou vidéo)</p>
-                    <p>&emsp; - Nom du responsable du cours(et pas la liste de tous les enseignants</p>
-                    <p>&emsp; - Nombre d'heure et modalité d'enseignement</p>
-                    <p>&emsp; - Prérequis(sans les remédiations)</p>
-                    <p>&emsp; - Objectifs du cours</p>
-                    <p>&emsp; - Les sections principales du programme détaillé(sans les activités)</p>
-                    <p>Vous pouvez voir à quoi ressemble un syllabus sur le site web en cliquant sur l'exemple ci dessous: </p>
+                    <p>
+                        Le contenu public correspond aux informations visibles par tous, y compris des personnes extérieurs à l'université.</p>
+                    <p>
+                        Lorsque votre syllabus est publié, une partie d'informations est utilisé pour l'afficher sur le site web de l'université, notamment sur l'offre de formation. </p>
+                    <p>
+                        Voici les informations principales qui se retrouvent sur le syllabus "public":
+                    </p>
+                    <ul>
+                        <li>Présentation générale(structure, niveau, semestre, domaine, langue, description, image ou vidéo)</li>
+                        <li>Nom du responsable du cours(et pas la liste de tous les enseignants</li>
+                        <li>Nombre d'heure et modalité d'enseignement</li>
+                        <li>Prérequis(sans les remédiations)</li>
+                        <li>Objectifs du cours</li>
+                        <li>Les sections principales du programme détaillé(sans les activités)</li>
+                    </ul>
+                    <p>
+                        Vous pouvez voir à quoi ressemble un syllabus sur le site web en cliquant sur l'exemple ci dessous:
+                    </p>
                 </div>
-                <div class="d-flex">
-                    <button class="btn btn-success">Voir un exemple de syllabus public</button>
+                <div class="mt-4">
+                    <button class="btn btn-primary">Voir un exemple de syllabus public</button>
                 </div>
             </div>
         </div>
