--- a/templates/modal/FillingHelpSyllabus.html.twig
+++ b/templates/modal/FillingHelpSyllabus.html.twig
@@ -1,6 +1,6 @@
 <div class="modal fade" id="fillingHelpSyllabusModal" tabindex="-1" role="dialog"
      aria-labelledby="fillingHelpSyllabus" aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="fillingHelpSyllabus">Aide au remplissage du syllabus</h4>
@@ -30,7 +30,7 @@
                     <p>Vous trouverez de nombreuses ressources pour vous aider à remplir votre syllabus sur :</p>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-success">Syllabus mode d'emploi</button>
+                    <button class="btn btn-primary">Syllabus mode d'emploi</button>
                 </div>
             </div>
         </div>
