--- a/templates/modal/RestrictedContent.html.twig
+++ b/templates/modal/RestrictedContent.html.twig
@@ -1,6 +1,6 @@
 <div class="modal fade" id="RestrictedContentModal" tabindex="-1" role="dialog"
      aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title text-blue" id="PublicContentModal">Qu'est ce que le contenu restreint ? </h4>
@@ -13,8 +13,8 @@
                     <p>Le contenu restreint correspond aux informations visibles uniquement par les étudiants inscrits à l'Université.</p>
                     <p>Lorsque votre syllabus est publié, ces informations ne seront donc pas affiché sur le site web de l'université, notamment sur l'offre de formation.</p>
                 </div>
-                <div class="d-flex">
-                    <button class="btn btn-success" data-dismiss="modal">J'ai compris</button>
+                <div class="mt-4">
+                    <button class="btn btn-primary" data-dismiss="modal">J'ai compris</button>
                 </div>
             </div>
         </div>
